--- a/pom.xml
+++ b/pom.xml
@@ -17,12 +17,6 @@
 			<version>3.8.1</version>
 			<scope>test</scope>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.webjars/bootstrap -->
-		<dependency>
-			<groupId>org.webjars</groupId>
-			<artifactId>bootstrap</artifactId>
-			<version>3.3.7-1</version>
-		</dependency>
 	</dependencies>
 	<build>
 		<finalName>site</finalName>
@@ -33,11 +27,22 @@
 					<artifactId>tomcat7-maven-plugin</artifactId>
 					<version>2.2</version>
 					<configuration>
-						<url>http://localhost:8080/manager</url>
-						<server>localhost</server>
+						<url>http://localhost:8080/manager/text</url>
+						<server>Tomcat9</server>
 						<path>/${project.build.finalName}</path>
+						<username>test</username>
+                     	<password>test</password>
 					</configuration>
 				</plugin>
+				<!-- <plugin>
+				    <groupId>org.codehaus.mojo</groupId>
+				    <artifactId>tomcat-maven-plugin</artifactId>
+				    <configuration>
+				        <url>http://localhost:8080/manager/html</url>
+				        <server>Tomcat9</server>
+				        <path>/${project.build.finalName}</path>
+				    </configuration>
+				</plugin> -->
 			</plugins>
 		</pluginManagement>
 	</build>
