--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,8 +3,8 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
 		 http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
-    <display-name>Foo</display-name>
-    <description>Bar</description>
+    <display-name>AMGArt</display-name>
+    <description>Art Gallery</description>
 
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
