--- a/pom.xml
+++ b/pom.xml
@@ -30,12 +30,11 @@
 		    <artifactId>jersey-client</artifactId>
 		    <version>2.26-b05</version>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc -->
+		<!-- https://mvnrepository.com/artifact/net.sourceforge.jtds/jtds -->
 		<dependency>
-		    <groupId>com.microsoft.sqlserver</groupId>
-		    <artifactId>mssql-jdbc</artifactId>
-		    <version>6.1.7.jre8-preview</version>
-		    <scope>test</scope>
+		    <groupId>net.sourceforge.jtds</groupId>
+		    <artifactId>jtds</artifactId>
+		    <version>1.3.1</version>
 		</dependency>
 	</dependencies>
 	<build>
